close Issue NO 20