@@ -17,12 +17,18 @@
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
         <version>2.1.9.RELEASE</version>
-       <!-- <version>2.0.3.RELEASE</version>-->
+        <!--<version>2.0.3.RELEASE</version>-->
         <relativePath/>
     </parent>
 
     <properties>
-        <java.version>1.8</java.version>
+        <!--<java.version>1.8</java.version>-->
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
+        <java.version>11</java.version>
+        <jaxb.version>2.3.0</jaxb.version>
+        <maven.compiler.source>${java.version}</maven.compiler.source>
+        <maven.compiler.target>${java.version}</maven.compiler.target>
     </properties>
 
     <build>
@@ -35,6 +41,11 @@
                 <groupId>org.apache.maven.plugins</groupId>
 <!--                <artifactId>maven-release-plugin</artifactId>-->
                 <artifactId>maven-surefire-plugin</artifactId>
+                <configuration>
+                    <argLine>
+                        --illegal-access=permit
+                    </argLine>
+                </configuration>
           <!--      <version>${maven-surefire-plugin.version}</version>
                 <configuration>
                     &lt;!&ndash; Force alphabetical order to have a reproducible build &ndash;&gt;
